--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -54,21 +54,17 @@
 
 */
 /*$primary  : #7356f1 !default;*/
-@import url("../../css.css");
-@import url("../../css-1.css");
-@import url("../../css-2.css");
-@import url("../../css-3.css");
-@import url("../../css-4.css");
+
 @import url("../icons/simple-line-icons/css/simple-line-icons.css");
 @import url("../icons/font-awesome-old/css/font-awesome.min.css");
 @import url("../icons/material-design-iconic-font/css/materialdesignicons.min.css");
 @import url("../icons/themify-icons/css/themify-icons.css");
 @import url("../icons/line-awesome/css/line-awesome.min.css");
 @import url("../icons/avasta/css/style.css");
-@import url(../vendor/animate/animate.min.css);
-@import url(../vendor/aos/css/aos.min.css);
-@import url(../vendor/perfect-scrollbar/css/perfect-scrollbar.css);
-@import url(../vendor/metismenu/css/metisMenu.min.css);
+@import url("../vendor/animate/animate.min.css");
+@import url("../vendor/aos/css/aos.min.css");
+@import url("../vendor/perfect-scrollbar/css/perfect-scrollbar.css");
+@import url("../vendor/metismenu/css/metisMenu.min.css");
 .gradient_one {
   background-image: linear-gradient(to right, rgba(186, 1, 181, 0.85) 0%, rgba(103, 25, 255, 0.85) 100%); }
 
@@ -24050,8 +24046,6 @@ button {
     .bootgrid-header .search {
       margin: 0 0 10px 0; } }
 
-table#example {
-  padding: 3rem 0 4rem 0; }
 
 #example2_wrapper .dataTables_scrollBody {
   max-height: 33.25rem !important; }
