--- a/public/client/assets/css/style.css
+++ b/public/client/assets/css/style.css
@@ -214,6 +214,7 @@ figure {
 img {
   vertical-align: middle;
   border-style: none;
+  border-radius: 5px !important;
 }
 
 svg {
@@ -579,6 +580,9 @@ pre code {
   .container {
     max-width: 720px;
   }
+  .title-banner{
+    top: 10% !important;
+  }
 }
 
 @media (min-width: 992px) {
@@ -605,11 +609,22 @@ pre code {
   .container, .container-sm {
     max-width: 540px;
   }
+  .position-relative .banner #title-banner{
+    top: 22% !important;
+  }
+}
+@media only screen and (max-width: 480px) and (min-width: 320px){
+  .position-relative .banner #title-banner{
+    top: 18% !important;
+  }
 }
 
 @media (min-width: 768px) {
   .container, .container-sm, .container-md {
     max-width: 720px;
+  }
+  .position-relative .banner #title-banner{
+    top: 50% !important;
   }
 }
 
